# wasm-locality-attribute

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  go.mod  go.sum
bazel/cargo/: BUILD.bazel  crates.bzl
bazel/cargo/remote/: BUILD.ahash-0.7.6.bazel  BUILD.cfg-if-1.0.0.bazel  BUILD.getrandom-0.2.3.bazel  BUILD.hashbrown-0.11.2.bazel  BUILD.libc-0.2.107.bazel  BUILD.log-0.4.14.bazel  BUILD.once_cell-1.8.0.bazel  BUILD.proxy-wasm-0.1.4.bazel  BUILD.version_check-0.9.3.bazel  BUILD.wasi-0.10.2+wasi-snapshot-preview1.bazel
example/: telemetry.yaml  wasmplugin.yaml
src/: README.md  lib.rs
test/: go.mod  go.sum  locality_test.go
test/testdata/: bootstrap.yaml.tmpl
