[package]
name = "wasm-locality-attr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"
proxy-wasm = "0.1.4"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

[package.metadata.raze]
package_aliases_dir = "bazel/cargo"
workspace_path = "//bazel/cargo"
genmode = "Remote"
